Fixed bug #69723 (Passing parameters by reference and array_column)